// Pisces 框架 - 通用协议定义
// 由 Pisces.Tools 自动生成

syntax = "proto3";

package pisces.protocol;

option csharp_namespace = "Pisces.Protocol";

// 消息类型枚举
enum MessageType {
    MESSAGE_TYPE_HEARTBEAT = 0;      // 心跳消息
    MESSAGE_TYPE_BUSINESS = 1;       // 业务消息
    MESSAGE_TYPE_TIME_SYNC = 2;      // 时间同步消息
    MESSAGE_TYPE_DISCONNECT = 3;     // 断开连接消息
}

// 断开连接原因枚举
enum DisconnectReason {
    DISCONNECT_REASON_UNKNOWN = 0;             // 未知原因
    DISCONNECT_REASON_CLIENT_CLOSE = 1;        // 客户端主动关闭
    DISCONNECT_REASON_SERVER_CLOSE = 2;        // 服务器主动关闭
    DISCONNECT_REASON_IDLE_TIMEOUT = 3;        // 长时间无操作超时
    DISCONNECT_REASON_DUPLICATE_LOGIN = 4;     // 重复登录
    DISCONNECT_REASON_SERVER_MAINTENANCE = 5;  // 服务器维护
    DISCONNECT_REASON_BANNED = 6;              // 被封禁
    DISCONNECT_REASON_NETWORK_ERROR = 7;       // 网络错误
    DISCONNECT_REASON_AUTHENTICATION_FAILED = 8; // 认证失败
}

// 断开通知消息
message DisconnectNotify {
    DisconnectReason reason = 1;        // 断开原因
    string message = 2;                 // 附加消息
    int64 estimated_recovery_time = 3;  // 预计恢复时间（毫秒）
    int64 timestamp = 4;                // 时间戳
}

// 外部消息包裹
message ExternalMessage {
    MessageType message_type = 1;   // 消息类型
    int32 protocol_switch = 2;      // 协议开关(可以忽略)
    int32 cmd_merge = 3;            // 合并命令号
    int32 response_status = 4;      // 响应码: 0=成功
    string valid_msg = 5;           // 错误描述
    bytes data = 6;                 // 业务数据（Protobuf 序列化）
    int32 msg_id = 7;               // 消息 ID（请求/响应配对）
}

// 时间同步消息
message TimeSyncMessage {
    int64 client_time = 1;      // 客户端时间（毫秒）
    int64 server_time = 2;      // 服务器时间（毫秒）
}

// 单个整数值
message IntValue {
    int32 value = 1;
}

// 单个长整型值
message LongValue {
    int64 value = 1;
}

// 单个字符串值
message StringValue {
    string value = 1;
}

// 单个布尔值
message BoolValue {
    bool value = 1;
}

// 整数值列表
message IntValueList {
    repeated int32 values = 1;
}

// 长整型值列表
message LongValueList {
    repeated int64 values = 1;
}

// 字符串值列表
message StringValueList {
    repeated string values = 1;
}

// 布尔值列表
message BoolValueList {
    repeated bool values = 1;
}

// 字节值列表
message ByteValueList {
    repeated bytes values = 1;
}

// 二维向量（浮点数）
message Vector2 {
    float x = 1;
    float y = 2;
}

// 二维向量（整数）
message Vector2Int {
    int32 x = 1; 
    int32 y = 2;
}

// 三维向量（浮点数）
message Vector3 {
    float x = 1; 
    float y = 2; 
    float z = 3;
}

// 三维向量（整数）
message Vector3Int {
    int32 x = 1; // X 坐标
    int32 y = 2; // Y 坐标
    int32 z = 3; // Z 坐标
}

// 二维向量数组（浮点数）
message Vector2List {
    repeated Vector2 values = 1;
}

// 二维向量数组（整数）
message Vector2IntList {
    repeated Vector2Int values = 1;
}

// 三维向量数组（浮点数）
message Vector3List {
    repeated Vector3 values = 1;
}

// 三维向量数组（整数）
message Vector3IntList {
    repeated Vector3Int values = 1;
}

// 字节键值对
message ByteValueEntry {
    bytes key = 1;   // 键
    bytes value = 2; // 值
}

// 字节键值对映射
message ByteValueMap {
    repeated ByteValueEntry entries = 1; // 字节键值对列表
}

// 整数键值对
message IntKeyEntry {
    int32 key = 1;   // 键
    bytes value = 2; // 值
}

// 整数键值对映射
message IntKeyMap {
    repeated IntKeyEntry entries = 1; // 整数键值对列表
}

// 长整型键值对
message LongKeyEntry {
    int64 key = 1;   // 键
    bytes value = 2; // 值
}

// 长整型键值对映射
message LongKeyMap {
    repeated LongKeyEntry entries = 1; // 长整型键值对列表
}

// 字符串键值对
message StringKeyEntry {
    string key = 1;  // 键
    bytes value = 2; // 值
}

// 字符串键值对映射
message StringKeyMap {
    repeated StringKeyEntry entries = 1; // 字符串键值对列表
}
